objects/Pay_Period__c.object
<CustomObject>
    <description>Pay Period</description>
    <fields>
        <fullName>Benefit_Accrued__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Benefit Accrued</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Calculate_Benefits__c</fullName>
        <formula>HYPERLINK(&apos;/apex/CalculateSFHCOBenefits?id=&apos;&amp;Id&amp;&apos;&amp;retURL=&apos;&amp;Id,IMAGE(&apos;/servlet/servlet.FileDownload?file=0152a0000004vl6&apos;, &quot;Create Benefits&quot;),&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculate Benefits</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculated_Benefits__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Calculated Benefits?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <inlineHelpText>Pay Period Start Date</inlineHelpText>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Pay Period</label>
    <nameField>
        <displayFormat>PP -{0000}</displayFormat>
        <label>Pay Period Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pay Period</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>